update for c2